[gd_scene load_steps=10 format=3 uid="uid://dlga8od4nqbbh"]

[ext_resource type="Texture2D" uid="uid://d2fha2lwbsvws" path="res://assets/enemies/shroom_small_001.png" id="1_hjwee"]
[ext_resource type="Script" path="res://scenes/collectables/shroom_small/shroom_small.gd" id="1_is2yo"]
[ext_resource type="Script" path="res://scenes/collectables/collectable_item.gd" id="2_ceydu"]
[ext_resource type="Resource" uid="uid://dr4xlkadynweu" path="res://scenes/collectables/shroom_small/shroom_small.tres" id="2_dte4a"]
[ext_resource type="PackedScene" uid="uid://c4exovrcqgwjg" path="res://scenes/collectables/sparkle_notification.tscn" id="5_ppqk7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h2jlr"]
radius = 2.0

[sub_resource type="Gradient" id="Gradient_at0rk"]
offsets = PackedFloat32Array(0, 0.798365)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_06tna"]
gradient = SubResource("Gradient_at0rk")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_pshvb"]
radius = 12.0

[node name="ShroomSmall" type="StaticBody2D"]
collision_layer = 32
collision_mask = 128
script = ExtResource("1_is2yo")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(0, -4)
remote_path = NodePath("../CanvasLayer/SparkleNotification")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hjwee")
offset = Vector2(2.08165e-12, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_h2jlr")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, 5)
color = Color(0, 0.717647, 0.721569, 1)
energy = 0.7
texture = SubResource("GradientTexture2D_06tna")
texture_scale = 0.9

[node name="CollectableItem" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 128
script = ExtResource("2_ceydu")
resource = ExtResource("2_dte4a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectableItem"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_pshvb")
debug_color = Color(1, 0.717047, 0.782275, 0.419608)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SparkleNotification" parent="CanvasLayer" instance=ExtResource("5_ppqk7")]
visible = false
position = Vector2(0, -4)

[connection signal="collected" from="CollectableItem" to="." method="_on_collectable_item_collected"]
[connection signal="player_entered" from="CollectableItem" to="." method="_on_collectable_item_player_entered"]
[connection signal="player_exited" from="CollectableItem" to="." method="_on_collectable_item_player_exited"]
